--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Nuevo.cshtml
@@ -901,6 +901,7 @@
                 //$("#formTipos").submit();
             } catch (e) {
                 $("#divProcesando").modal("hide");
+                btn.disabled = false;
 
                 Swal.fire({
                     icon: 'error',
