--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Editar.cshtml
@@ -55,7 +55,7 @@
             RecuperarTipoCambio();
             Recuperar();
             //selectOpcional();
-
+            MeterManoObra();
             //ModificaMoneda();
         });
 
@@ -342,7 +342,7 @@
                 })
             }
         }
-        function ModificaLinea(i, ban,inicio) {
+        function ModificaLinea(i, ban,inicio,modificatodo) {
             try {
                 var TP = TipoCambio.find(a => a.Moneda == "USD"); 
                 var Impuestos = 0;
@@ -418,7 +418,11 @@
                 ganancia = (gananciaBruta / parseFloat($("#" + i + "PrecioU").val())) * 100;
 
                 Detalles[i].PrecioUnitario = $("#" + i + "PrecioU").val();
-                Descuentos = ($("#" + i + "PorDesc").val() / 100) * Subtotal;
+                if (parseFloat($("#descGeneral").val()) > 0)
+                {
+                    $("#" + i + "PorDesc").val($("#descGeneral").val());
+                }
+                Descuentos =  ($("#" + i + "PorDesc").val() / 100) * Subtotal;
                 var idImpuesto = ImpuestosS.find(a => a.id == $("#" + i + "impSelector").val());
                 var IMP = ImpuestosS.find(a => a.id == idImpuesto.id);
                 var calculoIMP = IMP.Tarifa;
@@ -478,7 +482,11 @@
 
                 }
                 banderaConversion = banderaConverAntes;
-                ModificaTodo();
+                if(modificatodo != true)
+                {
+                    ModificaTodo();
+                }
+               
             } catch (e) {
                 Swal.fire({
                     icon: 'error',
@@ -499,7 +507,17 @@
                 var PorDescuento = 0;
 
                 PorDescuento = $("#descGeneral").val();
+                // for (var i = 0; i < Detalles.length; i++)
+                // {
+                //     ModificaLinea(i, false);
+                // }
                 for (var i = 0; i < Detalles.length; i++) {
+
+                    if (PorDescuento > 0)
+                    {
+                        $("#" + i + "PorDesc").val(PorDescuento);
+                        ModificaLinea(i, false, false, true);
+                    }
                     var ImpLocal = parseFloat($("#" + i + "Imp").text());
 
 
@@ -507,23 +525,25 @@
 
                     var TotalLocal = parseFloat($("#" + i + "TLinea").text());
 
-                    var subtotalLocal = (TotalLocal - ImpLocal);
-
+                    var subtotalLocal = ((TotalLocal + DescuentoLocal) - ImpLocal);
+                    var subTotalT = (TotalLocal - ImpLocal);
                     var checkbox1 = document.getElementById(i + "check");
                     if (Detalles[i].Garantia) {
                         checkbox1.checked = true;
                     } else {
                         SubTotal += subtotalLocal;
                         Impuestos += ImpLocal;
-                        Total += subtotalLocal + ImpLocal;
+                        Descuentos += DescuentoLocal;
+                        Total += subTotalT + ImpLocal;
                     }
                 }
 
-                if (PorDescuento > 0) {
-                    Descuentos = SubTotal * (PorDescuento / 100);
-                    Impuestos = (SubTotal - Descuentos) * 0.13;
-                    Total = (SubTotal - Descuentos) + Impuestos;
-                }
+                // if (PorDescuento > 0) {
+                //     Descuentos = SubTotal * (PorDescuento / 100);
+                //     Impuestos = (SubTotal - Descuentos) * 0.13;
+                     
+                //     Total = (SubTotal - Descuentos) + Impuestos;
+                // }
 
                 $("#SubtotalGeneral").text(SubTotal.toFixed(2));
                 $("#DescGeneral").text(Descuentos.toFixed(2));
@@ -1102,11 +1122,19 @@
                     Garantia: false,
                     Opcional: false
                 };
-                Detalles.push(detalle);
-                RellenaTabla();
 
-                var posicion = Detalles.indexOf(Detalles.find(a => a.ItemCode == detalle.ItemCode));
-                ModificaLinea(posicion, "false");
+                if (Detalles.find(a => a.ItemCode == ManoObra.codSAP) == undefined) {
+                    if (parseFloat("@Model.CantidadHoras") > 0)
+                    {
+                        Detalles.push(detalle);
+                        RellenaTabla();
+
+                        var posicion = Detalles.indexOf(Detalles.find(a => a.ItemCode == detalle.ItemCode));
+                        ModificaLinea(posicion, "false");
+                    }
+                   
+                }
+                
 
             } catch (e) {
                 Swal.fire({
@@ -2011,17 +2039,17 @@
                             {
                                 case 1:
                                     {
-                                            <h3 class="text-dark mb-1">Oferta de Venta</h3>
+                                                    <h3 class="text-dark mb-1">Oferta de Venta</h3>
                                         break;
                                     }
                                 case 2:
                                     {
-                                            <h3 class="text-dark mb-1">Entrega</h3>
+                                                    <h3 class="text-dark mb-1">Entrega</h3>
                                         break;
                                     }
                                 case 3:
                                     {
-                                            <h3 class="text-dark mb-1">Cotización BackOffice</h3>
+                                                    <h3 class="text-dark mb-1">Cotización BackOffice</h3>
                                         break;
                                     }
                             }
@@ -2323,37 +2351,37 @@
                                         {
                                             case 1:
                                                 {
-                                                        <td> Llamada Telefónica</td>
+                                                                <td> Llamada Telefónica</td>
 
                                                     break;
                                                 }
                                             case 2:
                                                 {
-                                                        <td> Reunión</td>
+                                                                <td> Reunión</td>
 
                                                     break;
                                                 }
                                             case 3:
                                                 {
-                                                        <td> Tarea</td>
+                                                                <td> Tarea</td>
 
                                                     break;
                                                 }
                                             case 4:
                                                 {
-                                                        <td>Nota</td>
+                                                                <td>Nota</td>
 
                                                     break;
                                                 }
                                             case 5:
                                                 {
-                                                        <td> Campaña</td>
+                                                                <td> Campaña</td>
 
                                                     break;
                                                 }
                                             case 6:
                                                 {
-                                                        <td> Otros</td>
+                                                                <td> Otros</td>
 
                                                     break;
                                                 }
