--- a/Sicsoft.Checkin.Web/Pages/Facturas/Reportes.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Facturas/Reportes.cshtml
@@ -135,6 +135,8 @@
                                 <h2 class="d-inline"><span class="font-size-24">Cierre Caja</span></h2>
                                 <div class="text-left">
                                     <h5>Fecha <span class="font-size-18">@Model.FechaR.ToString("dd MMM yyy")</span></h5>
+                                    <h5>Sucursal: <span class="font-size-18">@(Model.Sucursal == "" ? "Sin Sucursal": Model.Sucursal)</span></h5>
+
 
 
                                 </div>
