--- a/Sicsoft.Checkin.Web/Pages/CuentasBancarias/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/CuentasBancarias/Nuevo.cshtml
@@ -87,6 +87,21 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="nom">Sucursal:</label>
+                                <select class="form-control" asp-for="Input.idSucursal" required>
+                                    <option value="0" selected>Sin sucursal</option>
+
+                                    @foreach (var item in Model.Sucursales)
+                                    {
+                                        <option value="@item.id">@item.id - @item.Nombre</option>
+                                    }
+
+
+                                </select>
+                            </div>
+                        </div>
                     </div>
 
 
