--- a/Sicsoft.Checkin.Web/Pages/Movimientos/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Movimientos/Index.cshtml
@@ -136,7 +136,32 @@
         }
 
 
+        function onClickModalDevolucion(id) {
 
+            ids = id;
+
+
+            Swal.fire({
+                title: '¿Desea devolver este movimiento?',
+                showDenyButton: true,
+                showCancelButton: false,
+                confirmButtonText: `Aceptar`,
+                denyButtonText: `Cancelar`,
+                customClass: {
+                    confirmButton: 'swalBtnColor',
+                    denyButton: 'swalDeny'
+                },
+            }).then((result) => {
+                /* Read more about isConfirmed, isDenied below */
+                if (result.isConfirmed) {
+
+                    Devolver();
+
+                }
+            })
+
+
+        }
 
         function onClickModalEliminar(id) {
 
@@ -237,7 +262,51 @@
             })
         }
 
+        function Devolver() {
 
+
+            $.ajax({
+                type: 'GET',
+                dataType: 'json',
+                url: '@Url.Page("Index", "Devolucion")',
+                data: { id: ids },
+                success: function (result) {
+
+                    if (result == false) {
+                        ids = 0;
+
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Oops...',
+                            text: 'Ha ocurrido un error al intentar devolver en SAP'
+
+                        })
+                    } else {
+                        Swal.fire({
+                            title: "Ha sido devuelto con éxito",
+
+                            icon: 'success',
+                            showCancelButton: false,
+                            customClass: {
+                                confirmButton: 'swalBtnColor',
+
+                            },
+                            confirmButtonText: 'OK'
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                location.reload();
+                            }
+                        })
+                    }
+                },
+                beforeSend: function () {
+
+                },
+                complete: function () {
+
+                }
+            })
+        }
         function Aprobar(id) {
 
 
@@ -681,6 +750,17 @@
                                                 {
                                                     <a onclick="javascript: onClickModalAprobarSuperior('@item.id')" title="Aprobar Superior" class="btn btn-rounded btn-outline-secondary">Validado</a>
                                                 }
+                                            }
+                                        }
+                                        
+                                        &nbsp;
+                                        @if (!string.IsNullOrEmpty(Roles1.Where(a => a == "84").FirstOrDefault()))
+                                        {
+                                            @if ((item.TipoMovimiento == 2) && item.DocEntry > 0 && item.DocEntryDevolucion == 0)
+                                            {
+
+                                                <a onclick="javascript: onClickModalDevolucion('@item.id')" title="Generar Devolucion" class="btn btn-rounded btn-outline-danger">Devolución</a>
+                                            
                                             }
                                         }
                                         &nbsp;
